@@ -75,6 +75,7 @@ abstract class ResourceLoaderWikiModule extends ResourceLoaderModule {
 	}
 
 	public function getStyles( ResourceLoaderContext $context ) {
+		global $wgScriptPath;
 		
 		$styles = array();
 		foreach ( $this->getPages( $context ) as $page => $options ) {
@@ -89,6 +90,7 @@ abstract class ResourceLoaderWikiModule extends ResourceLoaderModule {
 			if ( $this->getFlip( $context ) ) {
 				$style = CSSJanus::transform( $style, true, false );
 			}
+			$style = CSSMin::remap( $style, false, $wgScriptPath, true );
 			if ( !isset( $styles[$media] ) ) {
 				$styles[$media] = '';
 			}
