@@ -334,6 +334,11 @@ return array(
 		'dependencies' => array( 'jquery.checkboxShiftClick', 'jquery.client', 'jquery.placeholder' ),
 		'debugScripts' => 'resources/mediawiki.util/mediawiki.util.test.js',
 	),
+	'mediawiki.action.history' => array(
+		'scripts' => 'resources/mediawiki.action/mediawiki.action.history.js',
+		'dependencies' => 'mediawiki.legacy.history',
+		'group' => 'mediawiki.action.history',
+	),
 	'mediawiki.action.edit' => array(
 		'scripts' => 'resources/mediawiki.action/mediawiki.action.edit.js',
 	),
@@ -347,10 +352,6 @@ return array(
 	),
 	'mediawiki.special.search' => array(
 		'scripts' => 'resources/mediawiki.special/mediawiki.special.search.js',
-	),
-	'mediawiki.action.history' => array(
-		'scripts' => 'resources/mediawiki.action/mediawiki.action.history.js',
-		'dependencies' => 'mediawiki.legacy.history',
 	),
 	'mediawiki.language' => array(
 		'scripts' => 'resources/mediawiki.language/mediawiki.language.js',
@@ -442,6 +443,7 @@ return array(
 	'mediawiki.legacy.diff' => array(
 		'scripts' => 'common/diff.js',
 		'styles' => 'common/diff.css',
+		'group' => 'mediawiki.action.history',
 		'remoteBasePath' => $GLOBALS['wgStylePath'],
 		'localBasePath' => "{$GLOBALS['IP']}/skins",
 		'dependencies' => 'mediawiki.legacy.wikibits',
@@ -460,6 +462,7 @@ return array(
 	),
 	'mediawiki.legacy.history' => array(
 		'scripts' => 'common/history.js',
+		'group' => 'mediawiki.action.history',
 		'remoteBasePath' => $GLOBALS['wgStylePath'],
 		'localBasePath' => "{$GLOBALS['IP']}/skins",
 		'dependencies' => 'mediawiki.legacy.wikibits',
