@@ -488,6 +488,9 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * (bug 26208) Mark directionality of some interlanguage links
 * (bug 26716) Provide link to instructions for external editor related preferences.
 * (bug 26961) Hide anon edits in watchlist preference now actually works.
+* (bug 26449) Keep underlines from headings outside of tables and thumbs by
+  adding overflow:hidden to h1,h2,h3,h4,h5,h6 (also fixes editsection bunching).
+* (bug 26708) Remove background-color:white from tables in Monobook and Vector.
 
 === API changes in 1.17 ===
 * BREAKING CHANGE: action=patrol now requires POST
